# qr.fossuok.org

./: .env.example  README.md  main.py  pyproject.toml
api/v1/: admin.py  api.py  auth.py  users.py
config/: __init__.py  supabase.py
models/: event.py  user.py
repository/: event_repo.py  registration_repo.py  user_repo.py
routes/: __init__.py  admin.py  auth.py  users.py
schema/: __init__.py  auth.py  event.py  registration.py  user.py
schemas/: __init__.py  user.py
services/: __init__.py  admin.py  auth.py  event.py  registration.py  user.py
static/css/: mobile.css  styles.css
static/js/: admin_events.js  admin_users.js  complete_profile.js
templates/: admin_events.html  admin_users.html  complete_profile.html  dashboard.html  layout.html  login.html  register.html  success.html  user_events.html  verify.html
