[project]
name = "fossuok-qr"
version = "0.2.0"
description = "QR-based event registration system for FOSSUoK"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cachetools>=6.2.6",
    "fastapi[standard]>=0.131.0",
    "fpdf2>=2.8.6",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "qrcode>=8.2",
    "supabase>=2.28.0",
]

[project.scripts]
app = "main:app"

[tool.vercel.scripts]
build = "python build.py"
